[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scene/Swipe/SwipeMix.gd" type="Script" id=1]
[ext_resource path="res://Image/MusicalTurntable.png" type="Texture" id=2]
[ext_resource path="res://Font/SanamDeklen_chaya.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Image/bg1080x1920.jpg" type="Texture" id=4]
[ext_resource path="res://Image/home.png" type="Texture" id=9]
[ext_resource path="res://Image/MusicalDrum.png" type="Texture" id=10]
[ext_resource path="res://Image/MusicalGuitar.png" type="Texture" id=11]
[ext_resource path="res://Image/Head_mno.png" type="Texture" id=12]
[ext_resource path="res://Image/MusicalBass.png" type="Texture" id=13]
[ext_resource path="res://Image/Head_Ichuen.png" type="Texture" id=14]
[ext_resource path="res://Image/Head_Speng.png" type="Texture" id=15]
[ext_resource path="res://Image/Head_olayzzz.png" type="Texture" id=16]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -67.3611, 59.5225, 67.3611, -59.5225, 72.3857, 842.881, 0, 0, 0, 0, 481.026, 783.39, -51.8817, -68.1725, 51.8817, 68.1725, 1009.86, 843.884, 0, -61.4026, 0, 61.4026, 1052.28, 1070.16, 86.3647, -85.427, -86.3647, 85.427, 998.542, 1319.06, 0, 0, 0, 0, 517.088, 1370.56, 81.2715, 84.1635, -81.2715, -84.1635, 61.6022, 1325.61, 0, 0, 0, 0, 11.7728, 1071.86, -86.9237, 55.0452, 86.9237, -55.0452, 73.4862, 840.326 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 50.5953

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.3898
height = 30.7156

[sub_resource type="CapsuleShape2D" id=4]
radius = 25.1722

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 33.0919, 20.1341 )

[sub_resource type="DynamicFont" id=6]
size = 44
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 44
font_data = ExtResource( 3 )

[node name="path2D" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 2.99658, 0 )
texture = ExtResource( 4 )
centered = false

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2( 72.3857, 842.881 )
rotate = false

[node name="Area2DHead" type="Area2D" parent="PathFollow2D" groups=["Mno"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Area2DHead"]
shape = SubResource( 2 )

[node name="tekgameHead_mno" type="Sprite" parent="PathFollow2D/Area2DHead"]
texture = ExtResource( 12 )

[node name="PathFollow2DOlay" type="PathFollow2D" parent="."]
position = Vector2( 713.558, 787.446 )
offset = 649.55
rotate = false

[node name="Area2DHeadOlay" type="Area2D" parent="PathFollow2DOlay" groups=["Olay"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2DOlay/Area2DHeadOlay"]
shape = SubResource( 2 )

[node name="tekgameHeadOlay" type="Sprite" parent="PathFollow2DOlay/Area2DHeadOlay"]
texture = ExtResource( 16 )

[node name="PathFollow2DSpeng" type="PathFollow2D" parent="."]
position = Vector2( 1036.41, 1268.01 )
offset = 1391.91
rotate = false

[node name="Area2DHeadSpeng" type="Area2D" parent="PathFollow2DSpeng" groups=["Speng"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2DSpeng/Area2DHeadSpeng"]
shape = SubResource( 2 )

[node name="tekgameHeadSpeng" type="Sprite" parent="PathFollow2DSpeng/Area2DHeadSpeng"]
texture = ExtResource( 15 )

[node name="PathFollow2DIchuen" type="PathFollow2D" parent="."]
position = Vector2( 423.769, 1377.29 )
offset = 2041.46
rotate = false

[node name="Area2DHeadIchuen" type="Area2D" parent="PathFollow2DIchuen" groups=["Ichuen"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2DIchuen/Area2DHeadIchuen"]
shape = SubResource( 2 )

[node name="tekgameHeadIchuen" type="Sprite" parent="PathFollow2DIchuen/Area2DHeadIchuen"]
texture = ExtResource( 14 )

[node name="Area2DMusicalBass" type="Area2D" parent="."]
position = Vector2( 286.179, 76.553 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DMusicalBass"]
shape = SubResource( 3 )

[node name="tekgame_MusicalBass" type="Sprite" parent="Area2DMusicalBass"]
texture = ExtResource( 13 )

[node name="Area2DMusicalGuitar" type="Area2D" parent="."]
position = Vector2( 185.712, 79.4954 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DMusicalGuitar"]
shape = SubResource( 3 )

[node name="tekgame_MusicalGuitar" type="Sprite" parent="Area2DMusicalGuitar"]
texture = ExtResource( 11 )

[node name="Area2DMusicalDrum" type="Area2D" parent="."]
position = Vector2( 410.207, 127.55 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DMusicalDrum"]
position = Vector2( 0, 5.99323 )
shape = SubResource( 4 )

[node name="tekgame_MusicalDrum" type="Sprite" parent="Area2DMusicalDrum"]
texture = ExtResource( 10 )

[node name="Area2DMusicalTurntable" type="Area2D" parent="."]
position = Vector2( 527.093, 138.038 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DMusicalTurntable"]
position = Vector2( 0, 5.99323 )
shape = SubResource( 5 )

[node name="tekgame_MusicalTurntable" type="Sprite" parent="Area2DMusicalTurntable"]
position = Vector2( 0, 1.7818 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CharacterScores" type="Label" parent="."]
margin_left = 224.0
margin_top = 916.0
margin_right = 411.0
margin_bottom = 1225.0
custom_colors/font_color = Color( 0.878431, 0.537255, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Mno : 0
Speng : 0
Ichuen : 0
Olay : 0"
align = 1

[node name="TotalScores" type="Label" parent="."]
margin_left = 223.0
margin_top = 1254.0
margin_right = 413.0
margin_bottom = 1329.0
custom_colors/font_color = Color( 0.921875, 0.129639, 0.129639, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Total : 0"
align = 1

[node name="HomeBT" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 449.0
margin_top = 1615.0
margin_right = 577.003
margin_bottom = 1743.0
texture_normal = ExtResource( 9 )

[connection signal="input_event" from="PathFollow2D/Area2DHead" to="." method="_on_Area2DHead_input_event"]
[connection signal="input_event" from="PathFollow2DOlay/Area2DHeadOlay" to="." method="_on_Area2DHeadOlay_input_event"]
[connection signal="input_event" from="PathFollow2DSpeng/Area2DHeadSpeng" to="." method="_on_Area2DHeadSpeng_input_event"]
[connection signal="input_event" from="PathFollow2DIchuen/Area2DHeadIchuen" to="." method="_on_Area2DHeadIchuen_input_event"]
[connection signal="area_entered" from="Area2DMusicalBass" to="." method="_on_Area2DMusicalBass_area_entered"]
[connection signal="area_entered" from="Area2DMusicalGuitar" to="." method="_on_Area2DMusicalGuitar_area_entered"]
[connection signal="area_entered" from="Area2DMusicalDrum" to="." method="_on_Area2DMusicalDrum_area_entered"]
[connection signal="area_entered" from="Area2DMusicalTurntable" to="." method="_on_Area2DMusicalTurntable_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="HomeBT" to="." method="_on_HomeBT_pressed"]
